# IDT_simple_demo

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  get_page_sorting.py  main.py  pages.json  parse_pdf.py  pdf_mapper.py  pyproject.toml
PromptCollection/: JuliaJu_en_Qwen2_5-VL-7B.csv
app_pages/: about.py  home.py  pdf_sorter.py
docker/: Dockerfile-cu124
pages/: 1_page_sorter.py
topic_mapper/: fill_mapper.csv
utils/: auth.py  files.py
