[tool.poetry]
name = "idt-simple-demo"
version = "0.1.0"
description = ""
authors = ["starminalush <alica154323@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
streamlit = "^1.42.2"
model-qwen2-5-vl = {git = "https://github.com/VLMHyperBenchTeam/model_qwen2.5-vl.git", rev = "0.1.0"}
pypdf = "^5.3.0"
streamlit-extras = "^0.5.5"
pymupdf = "^1.25.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
